--- a/language-translator/src/main/resources/templates/register.html
+++ b/language-translator/src/main/resources/templates/register.html
@@ -1,25 +1,52 @@
-<form th:action="@{/register}" method="post" th:object="${user}">
-    <!-- Show error message if present -->
-    <div th:if="${error}" class="alert alert-danger" role="alert">
-        <span th:text="${error}"></span>
-    </div>
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
+    <title>Register</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+</head>
+<body>
+    <div class="container mt-5">
+        <h2>Register</h2>
+        
+        <!-- Error message -->
+        <div th:if="${error}" class="alert alert-danger" role="alert">
+            <span th:text="${error}"></span>
+        </div>
 
-    <div class="form-group">
-        <label for="username">Username:</label>
-        <input type="text" class="form-control" id="username" th:field="*{username}" required>
+        <form th:action="@{/register}" method="post" th:object="${user}">
+            <div class="form-group">
+                <label for="username">Username:</label>
+                <input type="text" 
+                       class="form-control" 
+                       id="username" 
+                       th:field="*{username}" 
+                       required>
+            </div>
+            
+            <div class="form-group">
+                <label for="email">Email:</label>
+                <input type="email" 
+                       class="form-control" 
+                       id="email" 
+                       th:field="*{email}" 
+                       required>
+            </div>
+            
+            <div class="form-group">
+                <label for="password">Password:</label>
+                <input type="password" 
+                       class="form-control" 
+                       id="password" 
+                       th:field="*{password}" 
+                       required>
+            </div>
+            
+            <input type="hidden" 
+                   th:name="${_csrf.parameterName}" 
+                   th:value="${_csrf.token}" />
+            
+            <button type="submit" class="btn btn-primary">Register</button>
+        </form>
     </div>
-    
-    <div class="form-group">
-        <label for="email">Email:</label>
-        <input type="email" class="form-control" id="email" th:field="*{email}" required>
-    </div>
-    
-    <div class="form-group">
-        <label for="password">Password:</label>
-        <input type="password" class="form-control" id="password" th:field="*{password}" required>
-    </div>
-    
-    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-    
-    <button type="submit" class="btn btn-primary">Register</button>
-</form>
+</body>
+</html>
